feat: UserAPI 토큰 조건 유무 설정